April 4th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Add db_unknown_trap_format variable, update docs, faq

April 3rd, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Add support for logging unknown traps to SQL table.
  Added xxx_table_unknown variable for each SQL type.

January 25th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Clean up yesterday's symbolic fix.  It now translates all
  variable NAMES (if needed), the trap OID and the enterprise
  VALUE.

January 24th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Traps received using symbolic format (snmptrapd without -On) 
  were not being handled correctly.  Code in readtrap was looking
  at wrong variable name.  Moved to function 
  translate_symbolic_to_oid.  Called for trap OID variable value,
  agent_address,  community and agent addrss variable names

December 5th, 2003: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_0.9.1
- snmptt.conf file can now contain EXEC lines without FORMAT lines.

November 3rd, 2003: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_0.9
- snmptt-net-snmp-test now defaults to best_guess=2

October 27th, 2003: Alex Burger <alex_b@users.sourceforge.net>
- Syslog messages now use snmptt[pid] instead of TRAPD (traps) and
  snmptt-sys[pid] instead of SNMPTT (system messages)

October 10th, 2003: Alex Burger <alex_b@users.sourceforge.net>
- Added daemon_uid support to change user snmptt runs as after
  starting up

October 9th, 2003: Alex Burger <alex_b@users.sourceforge.net>
- Fixed bug with MATCH statement integer range.  1-5 would match
  only 2-4 instead of 1-5.

October 1st, 2003: Alex Burger <alex_b@users.sourceforge.net>
- Fixed bug with translate_value_oids_sub.  Was not detecting
  IP addresses correctly (backtracing problem).  Function
  resolve_value_ip_addresses_sub also changed.

September 16th, 2003: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_0.8.1
